--- a/app/templates/backend/admin_templates/bestellungen/admin_all_orders.html
+++ b/app/templates/backend/admin_templates/bestellungen/admin_all_orders.html
@@ -16,6 +16,7 @@
                                 <thead class="thead-light">
                                     <tr>
                                         <th class="border-0 rounded-start">#</th>
+                                        <th class="border-0">Kunde</th>
                                         <th class="border-0">Datum</th>
                                         <th class="border-0">Rechnung</th>
                                         <th class="border-0">Betrag</th>
@@ -28,6 +29,7 @@
                                     {% for index, order in enumerate(allData | sort(attribute='order_date', reverse=True)) %}
                                     <tr class="border-bottom"> <!-- Bootstrap border-bottom Klasse -->
                                         <td>{{ index + 1 }}</td>
+                                        <td>{{current_user.username}}</td>
                                         <td>{{ order.order_date.strftime('%Y-%m-%d') }}</td>
                                         <td>{{ order.invoice_no or 'None' }}</td>
                                         <td>{{ order.total_amount }}</td>
