--- a/app/templates/backend/client_templates/client_dashboard/includes/sidebar.html
+++ b/app/templates/backend/client_templates/client_dashboard/includes/sidebar.html
@@ -48,14 +48,46 @@
                   <span class="sidebar-text">Dashboard</span>
                 </a>
               </li>
-              <li class="nav-item {% if 'transactions' in segment %} active {% endif %}">
-                <a href="/transactions.html" class="nav-link">
-                  <span class="sidebar-icon">
-                    <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z"></path><path fill-rule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clip-rule="evenodd"></path></svg>
-                  </span>
-                  <span class="sidebar-text">Bestellungen</span>
+              <li class="nav-item {% if 'orders' in segment %} active {% endif %}">
+                <a href="#" class="nav-link" data-bs-toggle="collapse" data-bs-target="#client-orders-submenu" aria-expanded="false">
+                    <span class="sidebar-icon">
+                        <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5 4a3 3 0 00-3 3v6a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H5zm-1 9v-1h5v2H5a1 1 0 01-1-1zm7 1h4a1 1 0 001-1v-1h-5v2zm0-4h5V8h-5v2zM9 8H4v2h5V8z" clip-rule="evenodd"></path>
+                        </svg>
+                    </span>
+                    <span class="sidebar-text">Bestellungen</span>
+                    <span class="link-arrow">
+                        <svg class="icon icon-sm" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+                        </svg>
+                    </span>
                 </a>
-              </li>
+                <div class="multi-level collapse {% if 'orders' in segment %} show {% endif %}" id="client-orders-submenu">
+                    <ul class="flex-column nav">
+                        <li class="nav-item {% if 'all-orders' in segment %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('client_bp.all_orders') }}">
+                                <span class="sidebar-text">Alle Bestellungen</span>
+                            </a>
+                        </li>
+                        <li class="nav-item {% if 'pending-orders' in segment %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('client_bp.pending_orders') }}">
+                                <span class="sidebar-text">Ausstehende</span>
+                            </a>
+                        </li>
+                        <li class="nav-item {% if 'confirmed-orders' in segment %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('client_bp.confirmed_orders') }}">
+                                <span class="sidebar-text">Bestätigte</span>
+                            </a>
+                        </li>
+                        <li class="nav-item {% if 'delivered-orders' in segment %} active {% endif %}">
+                            <a class="nav-link" href="{{ url_for('client_bp.delivered_orders') }}">
+                                <span class="sidebar-text">Ausgelieferte</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            
 
               <li class="nav-item {% if 'tables-bootstrap-' in segment %} active {% endif %}">
                 <span
