--- a/app/templates/frontend/base_detail_checkout.html
+++ b/app/templates/frontend/base_detail_checkout.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="Askbootstrap">
       <meta name="author" content="Askbootstrap">
+      
       <title>Meine Profil</title>
       <!-- Favicon Icon -->
       <link rel="icon" type="image/png" href="img/favicon.png">
@@ -26,6 +27,8 @@
       <link rel="stylesheet" href="{{ url_for('static', filename='frontend/themes/vendor/owl-carousel/owl.theme.css')}}">
 
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" >
+      <meta name="csrf-token" content="{{ csrf_token() }}">
+
 
       
 
@@ -118,6 +121,15 @@
 
  <script>
     $(document).ready(function() {
+        // CSRF-Token aus dem Meta-Tag holen
+    let csrfToken = $('meta[name="csrf-token"]').attr('content');
+
+// jQuery AJAX-Anfragen konfigurieren, um den CSRF-Token automatisch hinzuzufügen
+$.ajaxSetup({
+    headers: {
+        'X-CSRFToken': csrfToken
+    }
+});
         // Funktion zum Erhöhen der Menge
         $(document).on('click', '.inc', function() {
             let productId = $(this).closest('[data-product-id]').data('product-id');
