--- a/app/templates/backend/base.html
+++ b/app/templates/backend/base.html
@@ -5,6 +5,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="Askbootstrap">
+      <meta name="csrf-token" content="{{ csrf_token() }}">
+
       <meta name="author" content="Askbootstrap">
       <title>Mahlzeit Express</title>
       <!-- Favicon Icon -->
