--- a/app/templates/backend/user_templates/user_login.html
+++ b/app/templates/backend/user_templates/user_login.html
@@ -27,6 +27,7 @@
                    <!-- End Flash Messages Block -->
                            
                           <form action="{{ url_for('user_bp.login') }}" method="POST">
+                           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                             <div class="form-label-group">
                               <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                                   <label for="email" class="form-label">Email</label>
